[tool.poetry]
name = "mvp-git-cacl"
version = "0.1.0"
description = ""
authors = ["saavajuu <juuso.saavalainen@helsinki.fi>"]
readme = "README.md"
packages = [{include = "mvp_git_cacl"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
matplotlib = "^3.8.2"
requests = "^2.31.0"
wordcloud = "^1.9.3"
streamlit = "^1.31.0"
seaborn = "^0.13.2"
pandas = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
